--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
       /* 中央寄せと最大幅の設定 */
       #app {
+        width: 90%;
         max-width: 1200px;
         margin: 2rem auto;
       }
