--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FullCalendar</title>
     <style>
+      /* 幅400px以下用 */
+      @media (max-width: 400px) {
+        .fc .fc-toolbar-title {
+          font-size: 1.5em;
+        }
+      }
       /* 中央寄せと最大幅の設定 */
       #app {
         width: 90%;
